<resources>
    <string name="app_name">Sweetify</string>
    <string name="home">Home</string>
    <string name="glupedia">Glu-pedia</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="searchbar_hint">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_glupedia">hello glupedia</string>
    <string name="hello_history">hello history</string>
    <string name="hello_profile">hello profile</string>
    <string name="hello_scan">hello scan</string>
    <string name="greeting_text">Hi, %1$s !</string>
    <string name="greeting_header">Check your drink\nsugar level now!</string>
    <string name="view_all"><u><![CDATA[View All >]]></u></string>
    <string name="description_scan">Scan FAB\n</string>
    <string name="grades_sugar">Get to know the levels!</string>
    <string name="button_scan">Button Scan</string>
    <string name="grade">Grade %1$s</string>
    <string name="user_photo">User Photo Profile</string>
    <string name="bottom_header">Bottom Header</string>
    <string name="grade_a">A</string>
    <string name="grade_b">B</string>
    <string name="grade_c">C</string>
    <string name="grade_d">D</string>
    <string name="logout">Logout</string>
    <string name="email_abid">abidbe.123@gmail.com</string>
    <string name="nama_abid">Abid Ibadurrahman</string>
    <string name="signup_now">Sign Up \n Now!</string>
    <string name="register_header">Please fill out the form first!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="login_now">Login \n\u00A0\u00A0\u00A0\u00A0\u00A0Now!</string>
    <string name="login">Login</string>
    <string name="history_log">Tracker</string>
    <string name="login_header">Welcome back!</string>
    <string name="or">Or</string>
    <string name="sign_in_with">Login with</string>
    <string name="google"><u><![CDATA[Google >]]></u></string>
    <string name="login_with_google">Google</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="goto_sign_up"><u><![CDATA[Sign Up]]></u></string>
    <string name="upload_your_image">Scan</string>
    <string name="recommended">Recommended</string>
    <string name="analyze">Analyze</string>
    <string name="enter_amount">Enter the amount (ml)</string>
    <string name="use_a_camera">Use a Camera</string>
    <string name="choose_photo">Choose a Photo</string>
    <string name="sugar">Sugar Per Serving</string>
    <string name="grams">Grams</string>
    <string name="amount">Sugar Based on Amount</string>
    <string name="buy">Purchase</string>
    <string name="product_name">Green Tea</string>
    <string name="not_recommended">Not Recommended</string>
    <string name="scan_result">Analyze Result</string>
    <string name="grams_example">40.0</string>
    <string name="log">Your Daily Purchase</string>
    <string name="dateSample">----/--/--</string>
    <string name="amount_history">Sugar</string>
    <string name="no_data">You haven\'t make any purchase today yet!</string>
    <string name="exceed_data">You have reach daily limit!</string>
    <string name="title_onboarding1">Welcome to Sweetify</string>
    <string name="title_onboarding2">Easy to Use</string>
    <string name="title_onboarding3">Get Started Now</string>
    <string name="desc_onboarding1">An app that helps you detect sugar levels in packaged drinks.</string>
    <string name="desc_onboarding2">Just scan the packaging of your drink and get sugar information quickly.</string>
    <string name="desc_onboarding3">Improve your health by monitoring your daily sugar intake from drinks.</string>
    <string name="next">Next</string>
    <string name="login_google">Login with Google</string>
    <string name="your_web_client_id">753469274486-o4v8q7o62ib1c6ti3qljn94bm17bvk2c.apps.googleusercontent.com</string>
    <string name="delete_data_desc">Delete Data</string>
    <string name="gram_sugar">0.333</string>
    <string name="grade_text">Grade</string>
    <string name="track_your_sugar_n_consumption">Track your sugar \n \u00A0\u00A0\u00A0\u00A0\u00A0 consumption!</string>
    <string name="daily_limit">Daily limit: 50 grams</string>
    <string name="today_s_consumption">Today\'s Consumption</string>
    <string name="you_are_below_the_daily_limit">You are below the daily limit</string>
    <string name="sugar_consumed">Sugar Consumed</string>
    <string name="_50_0">50.0</string>
    <string name="available_sugar">Available Sugar</string>
    <string name="hint_text">Please select or capture an image</string>
    <string name="no_available_sugar">No Available Sugar</string>
    <string name="message_nosugar">You don\'t have more available sugar to consume today. Are you sure you want to buy this drink?</string>
    <string name="not_enough_available_sugar">Not Enough Available Sugar</string>
    <string name="message_notenoughsugar">You don\'t have enough available sugar to consume this drink. Are you sure you want to buy this drink?</string>
    <string name="source">image: Flaticon.com</string>
    <string name="logout_button">Logout Button</string>
    <string name="personal_information">Personal Information</string>
    <string name="consumption_history">Consumption History</string>
    <string name="general">General</string>
    <string name="preference">Preference</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Settings</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="your_purchase_history_for_the_past_week">Your purchase history \n \u00A0\u00A0\u00A0\u00A0\u00A0 for the past week</string>
    <string name="until">until</string>
    <string name="consumed_sugar">Consumed Sugar:</string>
    <string name="you_re_below_the_limit_on_that_day">You\'re below the limit on this day!</string>
    <string name="you_ve_exceeded_the_limit_on_that_day">You\'ve exceeded the limit on this day</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="tracker">Tracker</string>
    <string name="no_title">no title</string>
    <string name="no_content">no content\n</string>
    <string name="next_boarding">Next</string>
    <string name="contacting_the_server">Contacting the server . . .</string>
    <string name="try_again">Try Again</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="email_tooltip">Email cannot be changed!</string>
    <string name="sugar_hint">Capture or choose image first!</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="grade_content_a">Sugar: 0 – 1g/100ml</string>
    <string name="grade_content_b">Sugar: 2 – 5g/100ml</string>
    <string name="grade_content_c">Sugar: 6 – 10g/100ml</string>
    <string name="grade_content_d">Sugar: > 10g/100ml</string>
    <string name="grade_content">This grade based on sugar per serving</string>
    <string name="learn_more_by_reading_the_article">Learn more by reading the article.</string>
    <string name="about_content">Welcome to Sweetify, your go-to app for monitoring sugar levels in packaged drinks. Designed with advanced scanning technology, Sweetify offers a seamless experience that helps you make informed choices about your beverages. With our user-friendly interface and comprehensive feature set, managing your sugar intake has never been easier. \n\nSweetify revolutionizes the way you monitor sugar intake from packaged drinks. Our app features a powerful scanning capability that quickly detects and displays sugar levels, ensuring you stay informed about your consumption. Whether you’re at home or on the go, Sweetify’s intuitive design and robust features provide a reliable companion for maintaining a healthier lifestyle. \n\nSweetify combines cutting-edge technology with an intuitive design to provide you with instant and accurate sugar content information, empowering you to make healthier beverage choices effortlessly. Enjoy the convenience of Sweetify\'s easy-to-use interface and comprehensive health insights at your fingertips. \n\nWith Sweetify, managing your sugar intake is straightforward and efficient. Our app’s advanced technology and user-friendly interface make it easy to stay on top of your sugar consumption. Sweetify not only provides accurate sugar content information but also supports your journey towards healthier beverage choices and overall well-being. \n\nSweetify is a groundbreaking app designed to help you detect sugar levels in packaged drinks with a simple scan. Our app leverages state-of-the-art scanning technology to detect sugar levels instantly. Sweetify not only provides accurate sugar content information but also supports your journey towards healthier beverage choices and overall well-being.</string>
    <string name="content_1">I Eat Chocolate After 30 Days of Quitting Sugar.</string>
    <string name="today">Today</string>
    <string name="content_2">I Might Have Kicked The Drug Called Sugar</string>
    <string name="yesterday">Yesterday</string>
    <string name="content_3">Why I Gave Up Sugar and You Should Give Up Too.</string>
    <string name="_15_june_2024">15 June 2024</string>
</resources>