<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abidbe.sweetify.view.main.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_gradeDetailFragment"
            app:destination="@id/gradeDetailFragment" />

    </fragment>
    <fragment
        android:id="@+id/gradeDetailFragment"
        android:name="com.abidbe.sweetify.view.main.GradeDetailFragment"
        android:label="grade_detail_fragment"
        tools:layout="@layout/fragment_grade_detail" />
    <fragment
        android:id="@+id/navigation_glupedia"
        android:name="com.abidbe.sweetify.view.glupedia.GlupediaFragment"
        android:label="@string/glupedia"
        tools:layout="@layout/fragment_glupedia" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.abidbe.sweetify.view.main.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.abidbe.sweetify.view.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.abidbe.sweetify.view.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>