<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/pink_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/potongan3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_marginStart="19dp"
            android:scaleType="fitStart"
            android:src="@drawable/logo_sweetify"
            app:layout_constraintStart_toEndOf="@id/header_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:elevation="2dp"
            android:text="@string/login_now"
            android:textColor="@color/pink_50"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/registerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-32dp"
        android:paddingBottom="12dp"
        android:text="@string/login_header"
        android:textColor="@color/pink_950"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_background" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:hint="@string/email"
        android:paddingBottom="12dp"
        app:boxBackgroundColor="@color/pink_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerHeader"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="44dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:hint="@string/password"
        android:paddingBottom="12dp"
        app:boxBackgroundColor="@color/pink_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="44dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        android:textColor="@color/pink_950"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

    <LinearLayout
        android:id="@+id/bottom_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_text">

        <TextView
            android:id="@+id/bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_in_with"
            android:textColor="@color/pink_950"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_50"
            android:contentDescription="@string/login_with_google"
            android:paddingTop="10dp"
            android:src="@drawable/google_icon"
            app:tint="@color/pink_950" />

    </LinearLayout>


    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/pink_400"
        android:text="@string/login"
        android:textColor="@color/pink_50"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_text_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/pink_950"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/goto_sign_up"
            android:textColor="@color/pink_950"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>