<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_50"
    tools:context=".view.history.TrackerFragment">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/history_log"
        android:textColor="@color/pink_950"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/costum_bg2"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_your_sugar_n_consumption"
            android:textColor="@color/pink_50"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDailyLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/daily_limit"
            android:textColor="@color/pink_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardExceedLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_600"
            android:elevation="10dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDailyLimit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/exceed_data"
                android:textColor="@color/pink_100"
                android:textSize="11sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBelowLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_300"
            android:elevation="10dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDailyLimit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/you_are_below_the_daily_limit"
                android:textColor="@color/pink_50"
                android:textSize="11sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.github.mikephil.charting.charts.PieChart>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardSugarConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/costum_bg"
        android:backgroundTint="@color/pink_500"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardData">

        <TextView
            android:id="@+id/tvSugarConsumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_consumed"
            android:textColor="@color/pink_50"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSugarValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:text="@string/_50_0"
            android:textColor="@color/pink_50"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSugarConsumed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/grams"
            android:textColor="@color/pink_50"
            app:layout_constraintBottom_toBottomOf="@id/tvSugarValue"
            app:layout_constraintStart_toEndOf="@id/tvSugarValue"
            app:layout_constraintTop_toTopOf="@id/tvSugarValue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/costum_bg"
        android:backgroundTint="@color/pink_300"
        android:padding="12dp"
        app:layout_constraintStart_toEndOf="@id/cardSugarConsumed"
        app:layout_constraintTop_toBottomOf="@id/cardData">

        <TextView
            android:id="@+id/tvSugarAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_sugar"
            android:textColor="@color/pink_50"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSugarValueAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:text="@string/_50_0"
            android:textColor="@color/pink_50"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSugarAvailable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/grams"
            android:textColor="@color/pink_50"
            app:layout_constraintBottom_toBottomOf="@+id/tvSugarValueAvailable"
            app:layout_constraintStart_toEndOf="@+id/tvSugarValueAvailable"
            app:layout_constraintTop_toTopOf="@+id/tvSugarValueAvailable" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="340dp"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/costum_bg"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textColor="@color/pink_950"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateSample"
            android:textColor="@color/pink_950"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHistory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink_100"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHistory">

        <ImageView
            android:id="@+id/imageNoData"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:contentDescription="@string/source"
            android:src="@drawable/shopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/pink_950" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_data"
            android:textColor="@color/pink_950"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageNoData" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="-10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHistory"
        tools:listitem="@layout/item_purchase" />


</androidx.constraintlayout.widget.ConstraintLayout>